<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center">

    <Button
          android:id="@+id/btnPromptAddImage"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/standard_touch_regularsize"
          android:gravity="center"
          android:adjustViewBounds="true"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:drawableStart="@drawable/ic_addimage"
          android:textColor="@color/colorAccent"
          android:text="@string/prompt_btn_image"/>

    <Button
          android:id="@+id/btnPromptAddVideo"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/standard_touch_regularsize"
          android:gravity="center"
          android:adjustViewBounds="true"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:drawableStart="@drawable/ic_addvideo"
          android:textColor="@color/colorAccent"
          android:text="@string/prompt_btn_video"/>

    <Button
          android:id="@+id/btnPromptAddAudio"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/standard_touch_regularsize"
          android:gravity="center"
          android:adjustViewBounds="true"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:drawableStart="@drawable/ic_addaudio"
          android:textColor="@color/colorAccent"
          android:text="@string/prompt_btn_audio"/>

    <Button
          android:id="@+id/btnPromptAddText"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/standard_touch_regularsize"
          android:gravity="center"
          android:adjustViewBounds="true"
          android:background="?attr/selectableItemBackgroundBorderless"
          android:drawableStart="@drawable/ic_addtext"
          android:textColor="@color/colorAccent"
          android:text="@string/prompt_btn_text"/>

</LinearLayout>